<resources>
    <string name="app_name">Library</string>

    <!-- app bar -->
    <string name="appbar_search_description">Search books in the application</string>
    <string name="appbar_search_title">Search</string>
    <string name="appbar_search_hint">Type to search</string>
    <string name="appbar_search_close">Close the search view</string>
    <!-- nav -->
    <string name="bottom_navigation_title_home">Home</string>
    <string name="bottom_navigation_title_cart">Cart</string>
    <string name="bottom_navigation_title_profile">Profile</string>

    <!-- profile -->
    <string name="profile_text">Profile</string>
    <string name="profile_settings_description">Shows additional options.</string>


    <string name="profile_user_name">Pangalan Mo</string>
    <string name="joined_date">Joined since 23 Nov. 2023</string>
    <string name="profile_picture_description">Profile picture of the user in Profile page</string>

    <string name="profile_order_category">My Books</string>
    <string name="profile_book_reservation">Show the list of books that are requested to be reserved.</string>
    <string name="profile_book_return">Show the list of books that needs to be returned.</string>

    <string name="profile_book_reservation_text">Reservation</string>
    <string name="profile_book_return_text">Return</string>

    <!-- home -->
    <string name="books_text">Books</string>
    <string name="book_add_text">Add</string>
    <string name="book_cancel_text">Cancel</string>

    <!-- login -->
    <string name="login_welcome_text">Welcome!</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_forgot_password_text">Forgot Password?</string>
    <string name="login_button">Login</string>
    <string name="login_continue_text">or continue with</string>
    <string name="google_image_description">sign in using google account</string>
    <string name="signup_text">Sign Up</string>

    <!-- register -->
    <string name="register_text">Register</string>
    <string name="register_button">Sign Up</string>
    <string name="register_display_name">Full Name</string>
    <string name="book_title_placeholder">Title</string>
    <string name="book_author_placeholder">Author</string>
    <string name="book_description_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <!-- cart -->
    <string name="cart_title_text">Cart</string>
    <string name="default_cart_content_text">Your Cart is Empty.</string>
    <string name="shopping_cart_icon_for_default_view">shopping cart icon for default view</string>
    <string name="cart_remove_item_text">Remove</string>
    <string name="empty_return_books_text">You do not have any books to return</string>
    <string name="returns_text">Returns</string>
    <string name="reservation_text">Reservation</string>
    <string name="empty_reservation_text">You do not have any reservations.</string>

    <string name="client_id">604490110837-m7n5ckvgmm879l4j8ilf5n2ulir4lr6i.apps.googleusercontent.com</string>
</resources>