<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/book_dialogue_root">

    <TextView
        android:id="@+id/book_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/book_title_placeholder"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/book_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/book_author_placeholder"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/book_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/book_description_placeholder"
        android:paddingStart="12dp"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:paddingEnd="12dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/cancel_book"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_style"
            android:backgroundTint="#176B87"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/book_cancel_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginEnd="50dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/add_book"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_style"
            android:backgroundTint="#176B87"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/book_add_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>



</LinearLayout>